# medizintechnik_ct_scan

./: CMakeLists.txt  main.cpp  style.qss  widget.cpp  widget.h  widget.ui
